Added requirements and comment lines

--- a/classify_with_webcam.ipynb
+++ b/classify_with_webcam.ipynb
@@ -9,8 +9,14 @@
     "import cv2\n",
     "import torch\n",
     "import torchvision.transforms as transforms\n",
-    "from PIL import Image\n",
-    "import numpy as np"
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load Model"
    ]
   },
   {
@@ -77,9 +83,15 @@
     }
    ],
    "source": [
-    "# Model ve class names yükleme\n",
     "classifier_model = torch.load('best_G5_classifier.pt', map_location=torch.device('cpu'))\n",
     "classifier_model.eval()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transform Images"
    ]
   },
   {
@@ -88,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Class names'i txt dosyasından okuma\n",
+    "# Read class names from txt\n",
     "with open('class_names.txt', 'r') as f:\n",
     "    class_names = f.read().splitlines()\n",
     "\n",
@@ -124,7 +136,7 @@
     "    # Transform image into suitable format for model\n",
     "    image_tensor = transform(image).unsqueeze(0)\n",
     "\n",
-    "    # Modelle tahmin yapın\n",
+    "    # Guess the result\n",
     "    with torch.no_grad():\n",
     "        output = classifier_model(image_tensor)\n",
     "        probabilities = torch.nn.functional.softmax(output, dim=1)\n",
@@ -139,7 +151,7 @@
     "    # Show the image\n",
     "    cv2.imshow('Camera', frame)\n",
     "\n",
-    "    # 'q' tuşuna basıldığında döngüyü kırın\n",
+    "    # Break the loop with 'q'\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
     "\n",
