--- a/garbage_classifier.ipynb
+++ b/garbage_classifier.ipynb
@@ -175,23 +175,23 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "# Sınıf isimlerini almak için\n",
+    "# Get the class names\n",
     "class_names = dataset.classes\n",
     "\n",
     "def imshow(img):\n",
-    "    img = img / 2 + 0.5  # Normalize işlemini geri al\n",
+    "    img = img / 2 + 0.5  # Reverse normalization \n",
     "    npimg = img.numpy()\n",
     "    plt.imshow(np.transpose(npimg, (1, 2, 0)))\n",
     "    plt.show()\n",
     "\n",
-    "# Eğitim veri setinden bir batch alalım\n",
+    "# Take one batch from training set\n",
     "dataiter = iter(train_loader)\n",
     "images, labels = dataiter.__next__()\n",
     "\n",
-    "# Görüntüleri göster\n",
+    "# Show images\n",
     "imshow(torchvision.utils.make_grid(images))\n",
     "\n",
-    "# Sınıf isimlerini yazdır\n",
+    "# Write the class names\n",
     "print('\\n'.join(' '.join(f'{class_names[labels[j]]}' for j in range(i, min(i + 8, len(labels)))) for i in range(0, len(labels), 8)))\n",
     "\n"
    ]
@@ -464,10 +464,10 @@
     "for param in VGG16_trash_classifier.features.parameters():\n",
     "    param.requires_grad = False\n",
     "\n",
-    "# Mevcut classifier yapısını alıp ilk üç katmanını koruyacağız\n",
+    "# Get the classifier structure and protect first tree layer\n",
     "classifier_first_part = VGG16_trash_classifier.classifier[:3]\n",
     "\n",
-    "# Kendi ekleyeceğimiz yeni layer'ları tanımlama\n",
+    "# Let's create our layers\n",
     "additional_layers = nn.Sequential(\n",
     "    nn.Linear(4096, 512),\n",
     "    nn.ReLU(inplace=True),\n",
@@ -475,10 +475,10 @@
     "    nn.Linear(512, 256),\n",
     "    nn.ReLU(inplace=True),\n",
     "    nn.Dropout(p=0.5),\n",
-    "    nn.Linear(256, 6)  # Son katman, 6 sınıf için çıkış\n",
+    "    nn.Linear(256, 6)  # For last layer 6 output\n",
     ")\n",
     "\n",
-    "# Yeni classifier yapısını oluşturma\n",
+    "# Create new classifier structure\n",
     "trash_classifier = nn.Sequential(\n",
     "    *classifier_first_part,\n",
     "    *additional_layers\n",
@@ -487,11 +487,10 @@
     "# Replace the classifier in VGG16 model with your 'trash_classifier'\n",
     "VGG16_trash_classifier.classifier = trash_classifier\n",
     "\n",
-    "# Tüm classifier parametrelerini dondurma\n",
+    "# Freeze all parameters of classifier\n",
     "for param in VGG16_trash_classifier.classifier.parameters():\n",
     "    param.requires_grad = False\n",
-    "\n",
-    "# Yalnızca eklediğimiz layer'ları eğitilebilir yapma\n",
+    "# Only make our layers trainable\n",
     "for param in VGG16_trash_classifier.classifier[3:].parameters():\n",
     "    param.requires_grad = True\n",
     "\n",
@@ -604,7 +603,7 @@
     "    avg_train_loss = running_loss / len(train_loader)\n",
     "    print(f'Epoch [{epoch + 1}/{num_epochs}], Train Loss: {avg_train_loss}')\n",
     "\n",
-    "    # Validation loss hesaplama\n",
+    "    # Calculating validation loss \n",
     "    VGG16_trash_classifier.eval()\n",
     "    val_loss = 0.0\n",
     "    with torch.no_grad():\n",
@@ -674,7 +673,7 @@
     }
    ],
    "source": [
-    "# Modeli test etme\n",
+    "# Test the model\n",
     "VGG16_trash_classifier.eval()\n",
     "correct = 0\n",
     "total = 0\n",
@@ -715,12 +714,12 @@
     "image_path = 'Test/Kagıt.jpg'\n",
     "image = Image.open(image_path)\n",
     "\n",
-    "image = transform(image).unsqueeze(0)  # Batch boyutunu eklemek için unsqueeze\n",
+    "image = transform(image).unsqueeze(0)  # To add batch size add unsqueze\n",
     "\n",
-    "# Modeli değerlendirme moduna alın\n",
+    "# Take the model into evaluation mode\n",
     "VGG16_trash_classifier.eval()\n",
     "\n",
-    "# Görüntüyü modele verip tahmin edin\n",
+    "# Give images to model and predict\n",
     "with torch.no_grad():\n",
     "    output = VGG16_trash_classifier(image)\n",
     "    _, predicted = torch.max(output.data, 1)\n",
